# block-master

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  Issues.txt  LICENSE  README.md  SPECS.md
.github/workflows/: build.yml
include/: version.h
include/calendar/core/: AppContext.hpp  UndoCommand.hpp  UndoStack.hpp
include/calendar/data/: DataProvider.hpp  Event.hpp  EventRepository.hpp  FileCalendarStorage.hpp  FileEventRepository.hpp  FileTodoRepository.hpp  InMemoryEventRepository.hpp  InMemoryTodoRepository.hpp  Todo.hpp  TodoRepository.hpp
include/calendar/ui/: MainWindow.hpp
include/calendar/ui/dialogs/: EventDetailDialog.hpp  SettingsDialog.hpp
include/calendar/ui/mime/: TodoMime.hpp
include/calendar/ui/models/: TodoFilterProxyModel.hpp  TodoListModel.hpp
include/calendar/ui/viewmodels/: ScheduleViewModel.hpp  TodoListViewModel.hpp
include/calendar/ui/widgets/: CalendarView.hpp  EventInlineEditor.hpp  EventPreviewPanel.hpp  TodoListView.hpp
resources/: block-master.qrc
scripts/: update_build_number.py  update_build_number.sh
src/: main.cpp
src/core/: AppContext.cpp  UndoStack.cpp
src/data/: DataProvider.cpp  FileCalendarStorage.cpp  FileEventRepository.cpp  FileTodoRepository.cpp  InMemoryEventRepository.cpp  InMemoryTodoRepository.cpp
src/ui/: MainWindow.cpp
src/ui/dialogs/: EventDetailDialog.cpp  SettingsDialog.cpp
src/ui/mime/: TodoMime.cpp
src/ui/models/: TodoFilterProxyModel.cpp  TodoListModel.cpp
src/ui/viewmodels/: ScheduleViewModel.cpp  TodoListViewModel.cpp
src/ui/widgets/: CalendarView.cpp  EventInlineEditor.cpp  EventPreviewPanel.cpp  TodoListView.cpp
tests/core/: UndoStackTest.cpp
tests/data/: TodoRepositoryTest.cpp
tests/ui/: ScheduleViewModelTest.cpp  TodoListModelTest.cpp
